--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
+    "file-type": "^15.0.0",
+    "fs": "^0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
