--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
 DB_HOST_v1=localhost
 DB_USER_v1=root
 DB_PASS_v1=""
-DB_DATABASE_v1=music_library
+DB_DATABASE_v1=dbl
 
 backend_url="http://localhost:3003"
-image_path = "songs/mp3"
